--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "im2bh"]
 	path = im2bh
 	url = git@github.com:zhu-xlab/HTC-DC-Net.git
-[submodule "polygonization"]
-	path = polygonization
+[submodule "im2bf"]
+	path = im2bf
 	url = git@github.com:zhu-xlab/GCP.git
